<resources>
    <string name="app_name">GPS-O</string>
    <string name="app_desg">Breakdown of runners</string>
    <string name="ORI_ML00000">Event Management</string>
    <string name="ORI_ML00001">Yes</string>
    <string name="ORI_ML00002">No</string>
    <string name="ORI_ML00003">Accept</string>
    <string name="ORI_ML00004">Cancel</string>
    <string name="ORI_ML00005">Exit</string>
    <string name="ORI_ML00006">Stop</string>
    <string name="ORI_ML00007">Tx</string>
    <string name="ORI_ML00008">Save</string>
    <string name="ORI_ML00010">dd/MM/yyyy</string>
    <string name="ORI_ML00011">yyyy-MM-dd 00:00:00.000</string>
    <string name="ORI_ML00012">yyyy-MM-dd HH:mm:ss.S</string>
    <string name="ORI_ML00013">MMM, yyyy</string>
    <string name="ORI_ML00014">dd/MM/yyyy HH:mm:ss</string>
    <string name="ORI_ML00015">HH:mm:ss</string>
    <string name="ORI_ML00016">yyyyMMdd_HHmmss</string>
    <string name="ORI_ML00020">Results list</string>
    <string name="ORI_ML00021">List</string>
    <string name="ORI_ML00022">Edit runners</string>
    <string name="ORI_ML00023">Number</string>
    <string name="ORI_ML00024">Class</string>
    <string name="ORI_ML00025">Surname</string>
    <string name="ORI_ML00026">Name</string>
    <string name="ORI_ML00027">Club</string>
    <string name="ORI_ML00028">Start</string>
    <string name="ORI_ML00029">Finish</string>
    <string name="ORI_ML00030">Time</string>
    <string name="ORI_ML00031">License</string>
    <string name="ORI_ML00032">Edit</string>
    <string name="ORI_ML00033">Edit parameters</string>
    <string name="ORI_ML00034">Server</string>
    <string name="ORI_ML00035">Port</string>
    <string name="ORI_ML00036">XML Path</string>
    <string name="ORI_ML00037">Configure</string>
    <string name="ORI_ML00038">Breakdown of runners</string>
    <string name="ORI_ML00039">Runner</string>
    <string name="ORI_ML00040">Event</string>
    <string name="ORI_ML00041">Place</string>
    <string name="ORI_ML00042">Points</string>
    <string name="ORI_ML00043">Average</string>
    <string name="ORI_ML00044">Correction</string>
    <string name="ORI_ML00045">Total</string>
    <string name="ORI_ML00046">HTML</string>
    <string name="ORI_ML00047">Calendar</string>
    <string name="ORI_ML00048">Management</string>
    <string name="ORI_ML00049">Reading</string>
    <string name="ORI_ML00050">Centroid</string>
    <string name="ORI_ML00051">Mo</string>
    <string name="ORI_ML00052">Tu</string>
    <string name="ORI_ML00053">We</string>
    <string name="ORI_ML00054">Th</string>
    <string name="ORI_ML00055">Fr</string>
    <string name="ORI_ML00056">Sa</string>
    <string name="ORI_ML00057">Su</string>
    <string name="ORI_ML00058">Record</string>
    <string name="ORI_ML00059">File</string>
    <string name="ORI_ML00060">Months</string>
    <string name="ORI_ML00061">January</string>
    <string name="ORI_ML00062">February</string>
    <string name="ORI_ML00063">March</string>
    <string name="ORI_ML00064">April</string>
    <string name="ORI_ML00065">May</string>
    <string name="ORI_ML00066">June</string>
    <string name="ORI_ML00067">July</string>
    <string name="ORI_ML00068">August</string>
    <string name="ORI_ML00069">September</string>
    <string name="ORI_ML00070">October</string>
    <string name="ORI_ML00071">November</string>
    <string name="ORI_ML00072">December</string>
    <string name="ORI_ML00073">Save</string>
    <string name="ORI_ML00074">Delete all records</string>
    <string name="ORI_ML00075">Generate OCAD</string>
    <string name="ORI_ML00076">GPS-O</string>
    <string name="ORI_ML00077">240</string>
    <string name="ORI_ML00078">320</string>
    <string name="ORI_ML00079">COM Port</string>
    <string name="ORI_ML00080">Bauds</string>
    <string name="ORI_ML00081">Word Bits</string>
    <string name="ORI_ML00082">Stop Bits</string>
    <string name="ORI_ML00083">Parity</string>
    <string name="ORI_ML00084">Refresh</string>
    <string name="ORI_ML00085">Close</string>
    <string name="ORI_ML00086">Longitude</string>
    <string name="ORI_ML00087">Latitude</string>
    <string name="ORI_ML00088">Altitude</string>
    <string name="ORI_ML00089">Datum</string>
    <string name="ORI_ML00090">Time</string>
    <string name="ORI_ML00091">Receiving...</string>
    <string name="ORI_ML00092">CENTROID</string>
    <string name="ORI_ML00093">Add</string>
    <string name="ORI_ML00094">Point</string>
    <string name="ORI_ML00095">Líne</string>
    <string name="ORI_ML00096">Area</string>
    <string name="ORI_ML00097">Id</string>
    <string name="ORI_ML00098">Type</string>
    <string name="ORI_ML00099">OCAD Type</string>
    <string name="ORI_ML00100">Description</string>
    <string name="ORI_ML00101">#Records:</string>
    <string name="ORI_ML00102">Mapa.ocd</string>
    <string name="ORI_ML00103">plantillaV7.ocd</string>
    <string name="ORI_ML00104">Scale</string>
    <string name="ORI_ML00105">Open Port</string>
    <string name="ORI_ML00106">Rec.</string>
    <string name="ORI_ML00107">Stop</string>
    <string name="ORI_ML00108">Fix</string>
    <string name="ORI_ML00109">Sat.</string>
    <string name="ORI_ML00110">HDOP</string>
    <string name="ORI_ML00111">O-Foot Paths</string>
    <string name="ORI_ML00112">MTBO Paths</string>
    <string name="ORI_ML00113">Interval mseg</string>
    <string name="ORI_ML00114">Version</string>
    <string name="ORI_ML00115">plantillaV6.ocd</string>
    <string name="ORI_ML00116">Generate GPX</string>
    <string name="ORI_ML00117">OCAD 6</string>
    <string name="ORI_ML00118">OCAD 7</string>
    <string name="ORI_ML00119">Coordinates</string>
    <string name="ORI_ML00120">Paper</string>
    <string name="ORI_ML00121">Real World</string>
    <string name="ORI_ML00122">UTM Zone</string>
    <string name="ORI_ML00123">Import GPX</string>
    <string name="ORI_ML00124">Browse file</string>
    <string name="ORI_ML00125">OCAD type in</string>
    <string name="ORI_ML00126">name</string>
    <string name="ORI_ML00127">desc</string>
    <string name="ORI_ML00128">none</string>
    <string name="ORI_ML00129">Default OCAD Objects</string>
    <string name="ORI_ML00130">Overwrite records</string>
    <string name="ORI_ML00131">File to import</string>
    <string name="ORI_ML00132">Fieldwork</string>
    <string name="ORI_ML00133">Configuration</string>
    <string name="ORI_ML00134">Editor</string>
    <string name="ORI_ML00135">Compass</string>
    <string name="ORI_ML00136">Background Image</string>
    <string name="ORI_ML00137">Sketch</string>
    <string name="ORI_ML00138">Create new</string>
    <string name="ORI_ML00139">UTM Top-Left</string>
    <string name="ORI_ML00140">UTM Bottom-Right</string>
    <string name="ORI_ML00141">Factor X</string>
    <string name="ORI_ML00142">Factor Y</string>
    <string name="ORI_ML00143">Zoom level</string>
    <string name="ORI_ML00144">UTM X Central</string>
    <string name="ORI_ML00145">UTM Y Central</string>
    <string name="ORI_ML00146">Layers</string>
    <string name="ORI_ML00147">Points/Lines</string>
    <string name="ORI_ML00148">Areas</string>
    <string name="ORI_ML00149">Dirty</string>
    <string name="ORI_ML00150">Color</string>
    <string name="ORI_ML00151">Black</string>
    <string name="ORI_ML00152">Green</string>
    <string name="ORI_ML00153">Red</string>
    <string name="ORI_ML00154">Blue</string>
    <string name="ORI_ML00155">Gray</string>
    <string name="ORI_ML00156">Rubber</string>
    <string name="ORI_ML00157">Pencil</string>
    <string name="ORI_ML00158">Move</string>
    <string name="ORI_ML00159">Zoom in</string>
    <string name="ORI_ML00160">Zoom out</string>
    <string name="ORI_ML00161">Initial size</string>
    <string name="ORI_ML00162">Activate/Deactivate GPS</string>
    <string name="ORI_ML00163">Distance</string>
    <string name="ORI_ML00164">Angle</string>
    <string name="ORI_ML00165">or</string>
    <string name="ORI_ML00166">Place in</string>
    <string name="ORI_ML00167">Prioritize quality</string>
    <string name="ORI_ML00168">Thickness</string>
    <string name="ORI_ML00169">Thin</string>
    <string name="ORI_ML00170">Thick</string>
    <string name="ORI_ML00171">Vector data</string>
    <string name="ORI_ML00172">Drawing mode</string>
    <string name="ORI_ML00173">Raster</string>
    <string name="ORI_ML00174">Vector</string>
    <string name="ORI_ML00175">yyyy-MM-dd</string>
    <string name="ORI_ML00176">HH:mm:ss.S</string>
    <string name="ORI_ML00177">Delete</string>
    <string name="ORI_ML00178">New ID</string>
    <string name="ORI_ML00179">Choose Baudrate</string>
    <string-array name="ORI_ML00180">
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>14400</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>128000</item>
    </string-array>
    <string name="ORI_ML00181">Choose WordBits</string>
    <string-array name="ORI_ML00182">
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="ORI_ML00183">Choose StopBits</string>
    <string-array name="ORI_ML00184">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
    </string-array>
    <string name="ORI_ML00185">Choose Parity</string>
    <string-array name="ORI_ML00186">
        <item>none</item>
        <item>even</item>
        <item>odd</item>
    </string-array>
    <string name="ORI_ML00187">Choose Scale</string>
    <string-array name="ORI_ML00188">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>4000</item>
        <item>5000</item>
        <item>7500</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>25000</item>
    </string-array>
    <string name="ORI_ML00189">Choose Delay</string>
    <string-array name="ORI_ML00190">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>25000</item>
    </string-array>
    <string name="ORI_ML00191">Drawing on</string>
    <string name="ORI_ML00192">Export sketches</string>
    <string name="ORI_ML00193">Use internal GPS</string>
    <string name="ORI_ML00194">GPS Settings</string>
    <string name="ORI_ML00195">Cloud</string>
    <string name="ORI_ML00196">Load Cloud</string>
    <string name="ORI_ML00197">Save Cloud</string>
    <string name="ORI_ML00198">Generate ASCII Grid</string>
    <string name="ORI_ML00199">Configure Cloud</string>
    <string name="ORI_ML00200">Use MTBO dual value on paths</string>
    <string name="ORI_ML00201">Dual Foot-O, MTBO</string>
    <string name="ORI_ML00202">Calibrate</string>
    <string name="ORI_ML00203">Show</string>
    <string name="ORI_ML00204">Calibration mode</string>
    <string name="ORI_ML00205">Accelerometer</string>
    <string name="ORI_ML00206">No sensor</string>
    <string name="ORI_ML00207">Rotation</string>
    <string name="ORI_ML00208">Locate</string>
    <string name="ORI_ML00209">Test conn.</string>
    <string name="ORI_ML00210">Show map</string>
    <string name="ORI_ML00211">Select Ids</string>
    <string name="ORI_ML00212">Show me</string>
    <string name="ORI_ML00213">Hide me</string>
    <string name="ORI_ML00214">Show track</string>
    <string name="ORI_ML00215">Hide track</string>
    <string name="ORI_ML00216">Servlet</string>
    <string name="ORI_ML00217">Delay (sec.)</string>
    <string name="ORI_ML00220">Normal</string>
    <string name="ORI_ML00221">Satellite</string>
    <string name="ORI_ML00222">Terrain</string>
    <string name="ORI_ML00223">Hybrid</string>
</resources>