<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/lblId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:text="@string/ORI_ML00097"></TextView>

        <EditText
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minWidth="100dp"
            android:minHeight="48dp"
            android:textSize="18sp"></EditText>

        <Button
            android:id="@+id/botNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00178"></Button>
    </LinearLayout>
        <TextView
            android:id="@+id/lblTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00098"></TextView>

        <Spinner
            android:id="@+id/lstTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="250dp"
            android:minHeight="48dp"></Spinner>

        <TextView
            android:id="@+id/lblTipoOCAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00099"></TextView>

        <Spinner
            android:id="@+id/lstTipoOCAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="250dp"
            android:minHeight="48dp"></Spinner>

        <TextView
            android:id="@+id/lblLongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00086"></TextView>

        <EditText
            android:id="@+id/txtLongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:minHeight="48dp"
            android:text="00:00:00.000"
            android:textSize="18sp"></EditText>

        <TextView
            android:id="@+id/lblLatitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00087"></TextView>

        <EditText
            android:id="@+id/txtLatitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:minHeight="48dp"
            android:text="00:00:00.000"
            android:textSize="18sp"></EditText>

        <TextView
            android:id="@+id/lblAltitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00088"></TextView>

        <EditText
            android:id="@+id/txtAltitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:minHeight="48dp"
            android:text="0"
            android:textSize="18sp"></EditText>

        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00100"></TextView>

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp"></EditText>

        <TextView
            android:id="@+id/lblSatelites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:minWidth="100dp"
            android:minHeight="32dp"
            android:text="---"></TextView>

        <TextView
            android:id="@+id/lblRegistros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:minWidth="150dp"
            android:minHeight="32dp"
            android:text="@string/ORI_ML00101"></TextView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/botLogAnadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00093"></Button>

        <Button
            android:id="@+id/botLogCentroide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00050"></Button>

        <Button
            android:id="@+id/botLogAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORI_ML00106"></Button>
    </LinearLayout>
</LinearLayout>
</ScrollView>